--- a/src/styles/components/_content-wrapper.scss
+++ b/src/styles/components/_content-wrapper.scss
@@ -45,4 +45,6 @@ $margin-size: 1rem;
     padding: 0;
     // background: $white-bis;
     background: $background-mobile;
+    align-items: stretch;
+    width: 100%;
 }
